--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ license = "Apache-2.0"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "4"
-matrix-sdk = { version = "0.6", features = ["anyhow"] }
-reqwest = { version = "0.11", features = ["json"] }
+matrix-sdk = { version = "0.6", default-features = false, features = ["anyhow", "rustls-tls", "e2e-encryption", "sled"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = "1"
 serde_json = "1"
 tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
